fix: resolve NPE and illegal char errors in URL parsing logic